fix port and depends on

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,11 +35,13 @@ services:
       - app-network
 
   nginx:
+    depends_on:
+      - nodeserver
     restart: always
     build:
       context: ./nginx
     ports:
-      - "80:80"
+      - "8080:80"
     networks:
       - app-network
 
