--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: yourpassword
       MYSQL_DATABASE: testdb
+      MYSQL_USER: root
     ports:
       - "3306:3306"
     volumes:
@@ -27,8 +28,9 @@ services:
     command: bash -c 'while !</dev/tcp/db/3306; do sleep 1; done; node index.js'
     container_name: nodeserver
     tty: true
-    volumes: 
+    volumes:
       - ./node:/usr/src/app
+      - /usr/src/app/node_modules
     # ports:
     #   - "3000:3000" # Uncomment this line if you want to expose the port
     networks:
